--- a/my-awx.yaml
+++ b/my-awx.yaml
@@ -3,8 +3,8 @@ apiVersion: awx.ansible.com/v1beta1
 kind: AWX
 metadata:
   name: awx
-spec:  
-  # tower_ingress_type: LoadBalancer
+# spec:  
+  # tower_ingress_type: NodePort
   # tower_ingress_annotations: |
   #   alb.ingress.kubernetes.io/scheme: internet-facing
   #   kubernetes.io/ingress.class: alb
