--- a/k8s_manifests/controllers_prerequisites/external-dns-sa.yaml
+++ b/k8s_manifests/controllers_prerequisites/external-dns-sa.yaml
@@ -4,4 +4,4 @@ metadata:
   annotations:                                                                        
     eks.amazonaws.com/role-arn: arn:aws:iam::021510583954:role/external-dns-role            
   name: external-dns-sa
-  namespace: kube-system
+  namespace: my-controllers-ns
