--- a/k8s_manifests/ingress/ingress.yaml
+++ b/k8s_manifests/ingress/ingress.yaml
@@ -6,8 +6,7 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/target-type: ip
-    external-dns.alpha.kubernetes.io/hostname: game.justpipeline.com, awx.justpipeline.com, pgadmin.justpipeline.com
-    external-dns.alpha.kubernetes.io/ttl: "100"
+    external-dns.alpha.kubernetes.io/hostname: grafana.justpipeline.com, justpipeline.com, game.justpipeline.com, awx.justpipeline.com, pgadmin.justpipeline.com    
 spec:  
   rules:
     - host: justpipeline.com
@@ -16,7 +15,14 @@ spec:
           - path: /*
             backend:
               serviceName: web-service
-              servicePort: 80   
+              servicePort: 80       
+    - host: grafana.justpipeline.com
+      http:
+        paths:
+          - path: /*
+            backend:
+              serviceName: helm-grafana
+              servicePort: 80       
     - host: pgadmin.justpipeline.com
       http:
         paths:
